# trend_following

./: .gitignore  CHANGELOG.md  README.md  acf.ipynb  acf.py  analysis.ipynb  analysis.py  contracts.csv  data  pyproject.toml  sweep.py  sweep_mvo.py  sweep_viz.ipynb
.claude/: settings.local.json
.claude/skills/: sweep.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
data/: load_data.sql  tf_index.html  transaction_costs.csv
gepa/: MVO.md  gepa_sweep.md  strategy_parametrizations.md
sweep_results/: progress.json
