[project]
name = "trend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "tqdm",
    "ipywidgets",
    "ipykernel",
    "pyarrow",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "duckdb>=1.5.0",
]

[dependency-groups]
dev = [
    "jupyterlab",
    "nbdime>=4.0.4",
]
